--- a/src/customerView.ui
+++ b/src/customerView.ui
@@ -162,6 +162,9 @@ p, li { white-space: pre-wrap; }
              <property name="maxLength">
               <number>128</number>
              </property>
+             <property name="clearButtonEnabled">
+              <bool>true</bool>
+             </property>
             </widget>
            </item>
            <item>
@@ -310,7 +313,7 @@ p, li { white-space: pre-wrap; }
           <enum>QTabWidget::Rounded</enum>
          </property>
          <property name="currentIndex">
-          <number>0</number>
+          <number>3</number>
          </property>
          <property name="iconSize">
           <size>
@@ -352,7 +355,7 @@ p, li { white-space: pre-wrap; }
                   <x>0</x>
                   <y>0</y>
                   <width>256</width>
-                  <height>346</height>
+                  <height>347</height>
                  </rect>
                 </property>
                 <layout class="QVBoxLayout" name="verticalLayout_9">
