--- a/src/dialogcategory.ui
+++ b/src/dialogcategory.ui
@@ -33,7 +33,11 @@
         </widget>
        </item>
        <item>
-        <widget class="QLineEdit" name="lineEdit_name"/>
+        <widget class="QLineEdit" name="lineEdit_name">
+         <property name="clearButtonEnabled">
+          <bool>true</bool>
+         </property>
+        </widget>
        </item>
        <item>
         <widget class="QLabel" name="label_2">
