--- a/src/dialoginvoice.ui
+++ b/src/dialoginvoice.ui
@@ -68,6 +68,9 @@
          <property name="maxLength">
           <number>255</number>
          </property>
+         <property name="clearButtonEnabled">
+          <bool>true</bool>
+         </property>
         </widget>
        </item>
        <item row="0" column="2">
