--- a/src/dialogprintchoice.ui
+++ b/src/dialogprintchoice.ui
@@ -137,6 +137,9 @@
          <property name="enabled">
           <bool>true</bool>
          </property>
+         <property name="clearButtonEnabled">
+          <bool>true</bool>
+         </property>
         </widget>
        </item>
        <item>
