--- a/src/dialogservicesedit.ui
+++ b/src/dialogservicesedit.ui
@@ -6,7 +6,7 @@
    <rect>
     <x>0</x>
     <y>0</y>
-    <width>757</width>
+    <width>771</width>
     <height>503</height>
    </rect>
   </property>
@@ -85,6 +85,9 @@
               </property>
               <property name="maxLength">
                <number>255</number>
+              </property>
+              <property name="clearButtonEnabled">
+               <bool>true</bool>
               </property>
              </widget>
             </item>
