--- a/src/dialogtax.ui
+++ b/src/dialogtax.ui
@@ -63,6 +63,9 @@
          <property name="maxLength">
           <number>128</number>
          </property>
+         <property name="clearButtonEnabled">
+          <bool>true</bool>
+         </property>
         </widget>
        </item>
        <item>
